# ffq

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
ffq/: ffq.py  main.py  utils.py
tests/: test_ffq.py  test_utils.py
