[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffq"
version = "0.3.1"
description = "A command line tool that makes it easier to find sequencing data from SRA / GEO / ENCODE / ENA / EBI-EMBL / DDBJ / Biosample."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Kyung Hoi (Joseph) Min", email = "phoenixter96@gmail.com" },
    { name = "Sina Booeshaghi", email = "alisina@caltech.edu" },
    { name = "Ángel Gálvez Merchán", email = "agalvezm@caltech.edu" },
]
maintainers = [
    { name = "Pachter Lab", email = "lpachter@caltech.edu" },
]
dependencies = [
    "beautifulsoup4>=4.8.2",
    "frozendict>=2.0.3",
    "lxml>=4.5.0",
    "requests>=2.23.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/pachterlab/ffq"

[project.scripts]
ffq = "ffq.main:main"

[dependency-groups]
dev = [
    "bump-my-version>=0.28.0",
    "coverage>=5.1",
    "pre-commit==2.17.0",
    "pytest>=7.0.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ffq"]

[tool.hatch.build.targets.sdist]
include = ["ffq", "LICENSE", "README.md"]

[tool.ruff]
line-length = 88
exclude = [".git", ".github", "__pycache__", "build", "dist"]

[tool.ruff.lint]
ignore = ["E203", "E501"]

[tool.bumpversion]
current_version = "0.3.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "ffq/__init__.py"

[[tool.bumpversion.files]]
filename = "README.md"
